package com.gabrielam.backend_metal_shows;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class BackendMetalShowsApplication {

	public static void main(String[] args) {
		SpringApplication.run(BackendMetalShowsApplication.class, args);
	}

}
